--- a/gladiatorFrontend/gladiatorAngular/src/app/components/adminwelcome/adminwelcome.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/adminwelcome/adminwelcome.component.html
@@ -1,3 +1,3 @@
-<button >Signup requests</button>
-<button>Bidding Auction</button>
-<button>User Data</button>
+<a routerLink="/admin-user-approval"><button mat-raised-button >User Approvals</button></a>
+<a routerLink="/admin-bid-auction"><button mat-raised-button >Bid Auction</button></a>
+
