--- a/gladiatorFrontend/gladiatorAngular/src/app/components/auction-request/auction-request.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/auction-request/auction-request.component.html
@@ -1,54 +1,47 @@
-<h3>request</h3>
-<div class="form">
-<div class="list-header-title">Hello Farmer
-    <form [formGroup]="requestForm" >
-    <mat-form-field>
-      <input id="cropType"
-             matInput
-             formControlName="cropType"
-             [(ngModel)]="request.cropType"
-             placeholder="Enter crop Type" />
-    </mat-form-field>
-    <br>
-    <mat-form-field>
-        <input id="cropName"
-               matInput
-               formControlName="cropName"
-               [(ngModel)]="request.cropName"
-               placeholder="Enter crop Name" />
-      </mat-form-field>
-      <br>
-      <mat-form-field>
-        <input id="fertType"
-               matInput
-               formControlName="fertType"
-               [(ngModel)]="request.fertType"
-               placeholder="Enter fertilizer type" />
-      </mat-form-field>
-      <br>
-      <mat-form-field>
-        <input id="quantity"
-               matInput
-               formControlName="quantity"
-               [(ngModel)]="request.quantity"
-               placeholder="Enter quantity" />
-      </mat-form-field>
-      <br>
-      <mat-form-field>
-        <input id="basePrice"
-               matInput
-               formControlName="basePrice"
-               [(ngModel)]="request.basePrice"
-               placeholder="Enter base price" />
-      </mat-form-field>
+<h4>Place Auction Request</h4>
+<form [formGroup]="requestForm" (ngSubmit)="(onSubmit())">
+
+       <div class="form-group" >
+           <label for="crop_name">Crop Name: </label>
+           <input type="text" size="10px"class="form-control" formControlName="crop_name" id="crop_name" />
+   
+       </div>
+   
+       <div class="form-group" >
+           <label for="crop_type">Crop Type: </label>
+           <input type="text" class="form-control" formControlName="crop_type" id="crop_type" />
+   
+       </div>
+   
+       <div class="form-group" >
+           <label for="fertilizer_type">Fertilizer Type: </label>
+           <input type="text" class="form-control" formControlName="fertilizer_type" id="fertilizer_type" />
+   
+       </div>
+   
+       <div class="form-group" >
+           <label for="quantity">Quantity:</label>
+           <input type="text" class="form-control" formControlName="quantity" id="quantity" />
+   
+       </div>
+       <div class="form-group" >
+         <label for="base_price">Base Price: </label>
+         <input type="text" class="form-control" formControlName="base_price" id="base_price" />
+   
+     </div>
+     <div class="form-group" >
+       <label for="ph">pH value: </label>
+       <input type="text" class="form-control" formControlName="ph" id="ph" />
+   
+   </div>
+       <button class="btn btn-success" type="submit" >Place Request</button> &nbsp;&nbsp;
+       <button class="btn btn-danger" type="reset">Cancel</button>
+       &nbsp;&nbsp;
+       <a class="btn btn-warning" routerLink="">Home</a>
+   </form>
+   
     
-     
-<!-- <form [formGroup]="requestForm" (ngSubmit)="onSubmit(requestForm.value)"> -->
-
-</form>
-</div>
-<button mat-raised-button color="primary" (click)="onSubmit()">Place Request</button>
-</div>
-
-
-
+   
+   
+   
+   
