--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
                     <mat-icon>person</mat-icon> -->
                     
                 
-                    <form [formGroup]="loginForm" (ngSubmit)="verifyLogin()" class="form-signin">
+                    <form [formGroup]="loginForm" (ngSubmit)="doLogin()" class="form-signin">
                         <!-- email address -->
                         <div class="form-group">
                             <label for="email" class="font-weight-bold">
