--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
@@ -84,6 +84,12 @@
   <input type="text" class="form-control" formControlName="TraderLicense"id=" TraderLicense" /> -->
 
 <!-- </div> -->
+<div class="form-group">
+  <label for="PAN">PAN: </label><br>
+  <input type="file" id="image" (change)="onSelectedFile($event)" />
+  <button mat-raised-button type="button" (click)="onUpload()">Upload the file</button>
+
+ </div>
 <div class="form-group" >
   <label for="Password">Password: </label>
   <input type="password" class="form-control" formControlName="password" id="Password" />
