--- a/gladiatorFrontend/gladiatorAngular/src/app/components/adminwelcome/adminwelcome.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/adminwelcome/adminwelcome.component.html
@@ -3,6 +3,7 @@
     <div class="btn-group">
       <button type="button" class="welcomebutton " color="primary" mat-raised-button (click)="UserRequests()">User Requests for Approval</button>
       <button type="button" class="welcomebutton" color="primary" mat-raised-button (click)="AuctionRequests()">Auction Requests by Farmers</button>
-      <button type="button" class="welcomebutton" color="primary" mat-raised-button (click)="BidRequests()">Bid Requests ny Bidders</button>
+      <button type="button" class="welcomebutton" color="primary" mat-raised-button (click)="BidRequests()">Bid Requests by Bidders</button>
+      <button type="button" class="welcomebutton" color="primary" mat-raised-button (click)="SellCrop()">Sell Crops in Auction</button>
     </div>
   </div>
