changes in designs

--- a/gladiatorFrontend/gladiatorAngular/src/app/components/admin-bid-auction/admin-bid-auction.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/admin-bid-auction/admin-bid-auction.component.html
@@ -3,7 +3,7 @@
 <h3>Bid Approval Requests</h3>
 <br>
 
-<table border="5" class="table">
+<table align="center" class="table">
 <tr>
     <th>
         Crop Name
@@ -35,7 +35,7 @@
     
     
     
-    <td><a><button class="btn btn-success btn-lg" (click)="onAccept(i.BIID)" >Accept</button></a></td>
+    <td><a><button class="btn btn-success btn-lg" (click)="onAccept(i.BIID)" >Approve</button></a></td>
     <td><a><button class="btn btn-danger btn-lg" (click)="onReject(i.BIID)" >Reject</button></a></td>
     
 
