--- a/gladiatorFrontend/gladiatorAngular/src/app/components/admin-sold/admin-sold.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/admin-sold/admin-sold.component.html
@@ -3,7 +3,7 @@
 <h3>Admin Marketplace</h3>
 <br>
 
-<table border="5" class="table">
+<table align="center" class="table">
 <tr>
     <th>
         CID
