--- a/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-registration/bidder-registration.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-registration/bidder-registration.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="user" (ngSubmit)="(onSubmit())">
+<div class="background"><form [formGroup]="user" (ngSubmit)="(onSubmit())">
 
   <div class="form-group" >
       <label for="fullName">First Name: </label>
@@ -85,7 +85,7 @@
   &nbsp;&nbsp;
   <a class="btn btn-warning" routerLink="">Home</a>
 </form>
-
+</div>
 
 
 
