--- a/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-welcome/bidder-welcome.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-welcome/bidder-welcome.component.css
@@ -42,7 +42,7 @@
 
   .bg{
     background-position: center;
-    background-image: url("src/assets/images/bidderbg.jpg");
+    /* background-image: url("src/assets/images/bidderbg.jpg"); */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
   }
