--- a/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-welcome/bidder-welcome.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-welcome/bidder-welcome.component.html
@@ -5,7 +5,7 @@
 
 <div class="column">  
     <div class="card">
-      <img src="../assets/images/bidder.png" alt="farmers auction" style="width:100%">
+      <!-- <img src="../assets/images/bidder.png" alt="farmers auction" style="width:100%"> -->
       
       <p><a routerLink="/bidding-auction"><button mat-raised-button >Bid Now</button></a></p>
     </div>
