--- a/gladiatorFrontend/gladiatorAngular/src/app/components/bidding-auction/bidding-auction.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/bidding-auction/bidding-auction.component.html
@@ -1,7 +1,7 @@
 <h3>Bidder Marketplace Table</h3>
 <br>
 
-<table border="5" class="table">
+<table align="center" class="table">
 <tr>
     <th>
         CID
