--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-registration/farmer-registration.component.html
@@ -1,3 +1,5 @@
+ <div class="bgpic">
+ <div border="2"class="background" >
  <form [formGroup]="user" (ngSubmit)="(onNext())">
 
     <div class="form-group" >
@@ -91,8 +93,8 @@
     &nbsp;&nbsp;
     <a class="btn btn-warning" routerLink="">Home</a>
 </form>
-
-
+</div>
+</div>
  
 
 
