--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-welcome/farmer-welcome.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-welcome/farmer-welcome.component.html
@@ -5,7 +5,7 @@
   
       <div class="column">  
     <div class="card">
-      <img src="../assets/images/card5.jpg" alt="farmers auction" style="width:100%">
+      <!-- <img src="../assets/images/card5.jpg" alt="farmers auction" style="width:100%"> -->
       
       <p><button type="button"  color="primary" mat-raised-button (click)="goToAuction()">Place Aution Request</button></p>
     </div>
@@ -14,7 +14,7 @@
   
     <div class="column">
    <div class="card">
-      <img src="../assets/images/finalcard.png" alt="farmers auction" style="width:100%">
+      <!-- <img src="../assets/images/finalcard.png" alt="farmers auction" style="width:100%"> -->
       
       <p><button type="button"  color="primary" mat-raised-button (click)="goToSoldHistory()">Sold History</button></p>
     </div>
@@ -23,7 +23,7 @@
   
      <div class="column">   
     <div class="card">
-      <img src="../assets/images/finalcard2.png" alt="farmers auction" style="width:100%">
+      <!-- <img src="../assets/images/finalcard2.png" alt="farmers auction" style="width:100%"> -->
       
       <p><button type="button"  color="primary" mat-raised-button (click)="goToMarketplace()">View Marketplace</button></p>
     </div> 
