--- a/gladiatorFrontend/gladiatorAngular/src/app/components/sold-history/sold-history.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/sold-history/sold-history.component.html
@@ -1,7 +1,9 @@
-<h3>Sold History Table</h3>
+
+<br><br>
+<h1>Sold History Table</h1>
 <br>
 
-<table border="5" class="table">
+<table align="center" class="table">
 <tr>
     <th>
         Sold Date
