--- a/gladiatorFrontend/gladiatorAngular/src/app/app.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/app.component.html
@@ -1,15 +1,14 @@
 <mat-toolbar class="navbar" color="white">
   <div class="logo-text" >
     <a routerLink='/' style="color: inherit; text-decoration: none; height: 100%">
-      Farmer Portal
+      Farmer 
     </a>
   </div>
   <div>
     <span> 
-      <a mat-button routerLink="/home" >Home</a> 
-      <a mat-button routerLink="src/app/about" >About Us</a> 
-      <a mat-button routerLink="src/app/contact" >Contact Us</a> 
-
+      <a mat-button routerLink=""  style="color:white;font-size: medium;">Home</a> 
+      <a mat-button routerLink="src/app/about" style="color:white;font-size: medium;">About Us</a> 
+      <a mat-button routerLink="src/app/contact" style="color:white;font-size: medium;" >Contact Us</a> 
       <mat-menu #appMenu="matMenu">
         <a routerLink="/loginfarmer"><button mat-menu-item >Farmer</button></a>
         <a routerLink="/loginbidder"><button mat-menu-item >Bidder</button></a>
