--- a/gladiatorFrontend/gladiatorAngular/src/app/components/admin-sell-auction/admin-sell-auction.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/admin-sell-auction/admin-sell-auction.component.html
@@ -3,7 +3,7 @@
 <h3>User Approval Requests</h3>
 <br>
 
-<table border="5" class="table">
+<table align="center" class="table">
 <tr>
     <th>
         Crop Type
@@ -34,7 +34,7 @@
     <td>{{i.base_price}}</td>
     <td>{{i.ph}}</td>
     
-    <td><a><button class="btn btn-danger btn-lg" (click)="onAccept(i.CID)" >Accept</button></a></td>
+    <td><a><button class="btn btn-success btn-lg" (click)="onAccept(i.CID)" >Approve</button></a></td>
     <td><a><button class="btn btn-danger btn-lg" (click)="onReject(i.CID)" >Reject</button></a></td>
     
 
