--- a/gladiatorFrontend/gladiatorAngular/src/app/components/admin-user-approvals/admin-user-approvals.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/admin-user-approvals/admin-user-approvals.component.html
@@ -3,7 +3,7 @@
 <h3>User Approval Requests</h3>
 <br>
 
-<table border="5" class="table">
+<table align="center" class="table">
 <tr>
     <th>
         UID
@@ -25,8 +25,8 @@
     <td>{{i.email}}</td>
     <td>{{i.contactno}}</td>
     
-    <td><a><button class="btn btn-danger btn-lg" (click)="onAccept(i.UID)" >Accept</button></a></td>
-    <td><a><button class="btn btn-danger btn-lg" (click)="onReject(i.UID)" >Rejectt</button></a></td>
+    <td><a><button class="btn btn-success btn-lg" (click)="onAccept(i.UID)" >Approve</button></a></td>
+    <td><a><button class="btn btn-danger btn-lg" (click)="onReject(i.UID)" >Reject</button></a></td>
     
 
 </tr>
