--- a/gladiatorFrontend/gladiatorAngular/src/app/components/adminwelcome/adminwelcome.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/adminwelcome/adminwelcome.component.css
@@ -20,7 +20,7 @@
 
   .bg{
     background-position: center;
-    background-image: url("src/assets/images/unnamed.jpg");
+    /* background-image: url("src/assets/images/unnamed.jpg"); */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
   }
