--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-previousbids/farmer-previousbids.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-previousbids/farmer-previousbids.component.html
@@ -1,7 +1,7 @@
 <h3>Crop Market Status</h3>
 <br>
 
-<table border="5" class="table">
+<table align="center" class="table">
 <tr>
     <th>
         Crop Type
@@ -25,7 +25,7 @@
     <td>{{marketcrop.base_price}}</td>
     <td>{{marketcrop.current_bid}}</td>
 </tr><br><br>
-<table border="5" class="table"></table>
+<!-- <table border="5" class="table"></table>
 <tr>
     <th>
         Previous Bids
@@ -34,7 +34,7 @@
 </tr>
 <tr *ngFor="let i of previousbids">
     <td>{{i.bid1}}</td>
-</tr>
+</tr> -->
 
 <a><button class="btn btn-danger btn-lg" routerLink="/bidder-welcome" >Back</button></a>
 </table>
