--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login-farmer/login-farmer.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login-farmer/login-farmer.component.html
@@ -1,5 +1,3 @@
-<br/>
-<br/>
 <div class="bgpic">
     <div class="container">
         <br/>
@@ -7,7 +5,7 @@
         <!-- LOGIN FORM -->
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 container justify-content-center">
-                <h1 class="text-center login-title text-white font-weight-bold"><p>Hello Farmer!</p>
+                <h1 class="text-center login-title text-white font-weight-bold"  style="color:rgb(77, 190, 77); font-style: normal;font-weight: bold;">Hello Farmer!<br>
                     Please Enter login details</h1>
                 <div class="account-wall">
                     <!-- ICON FOR LOGIN FORM -->
