Forgot oassword and some changes

--- a/gladiatorFrontend/gladiatorAngular/src/app/app.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="navbar" color="white">
   <div class="logo-text" >
     <a routerLink='/' style="color: inherit; text-decoration: none; height: 100%">
-      Farmer 
+      Farmer Portal
     </a>
   </div>
   <div>
@@ -12,7 +12,7 @@
       <mat-menu #appMenu="matMenu">
         <a routerLink="/loginfarmer"><button mat-menu-item >Farmer</button></a>
         <a routerLink="/loginbidder"><button mat-menu-item >Bidder</button></a>
-        <a routerLink="/login"><button mat-menu-item >Admin</button></a>
+        <a routerLink="/loginadmin"><button mat-menu-item >Admin</button></a>
 
       </mat-menu>
 
