--- a/gladiatorFrontend/gladiatorAngular/src/app/components/auction-request/auction-request.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/auction-request/auction-request.component.html
@@ -1,5 +1,5 @@
-<h4>Place Auction Request</h4>
-<form [formGroup]="requestForm" (ngSubmit)="(onSubmit())">
+<br><br><h1 style="text-align: center;">Place Auction Request</h1>
+<form [formGroup]="requestForm" (ngSubmit)="(onSubmit())" class="background">
 
        <div class="form-group" >
            <label for="crop_name">Crop Name: </label>
