--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login-farmer/login-farmer.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login-farmer/login-farmer.component.html
@@ -54,19 +54,23 @@
                         <button class="btn btn-outline-danger" type="reset"> Cancel</button>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <a class="btn btn-warning" routerLink="/home">
-                            Go Home</a>
-                        <br/>
-                        <br/>
-                        Not Registerd?<a routerLink="/farmerregister"> Signup Here</a>
+                             Home</a>
+                        <br>
+                     
+                       <br>
+                         <a routerLink="/forgotcustomerid" style="color:red" routerLink="/forgotpassword">Forgot Password?</a> &nbsp; &nbsp;&nbsp;
+                        <br><br>
+                        <div>
+                            Not Registerd?<a routerLink="/farmerregister">Signup Here</a>
+                        </div> 
                         
-                        <!-- <a routerLink="/forgotcustomerid" class="" routerLink="/forgotcustomerid">Forgot CustomerID</a> &nbsp; &nbsp;&nbsp;
-                        <a class="" routerLink="/forgotcustomerpwd">Forgot Password</a> -->
-                        <br/>
+                        
+                      
                         <!-- <div class="error" *ngIf="invalidLogin">
                             <div class="text-danger">
                                 Invalid Customer Id or Password !
                             </div>
-                        </div> -->
+                        </div>  -->
                     </form>
                 </div>
                 <br/>
