--- a/gladiatorFrontend/gladiatorAngular/src/app/components/sold-history/sold-history.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/sold-history/sold-history.component.html
@@ -1,10 +1,10 @@
 
 <br><br>
-<h1>Sold History Table</h1>
+<h1 style="text-align: center;">Sold History Table</h1>
 <br>
 
 <table align="center" class="table">
-<tr>
+<tr style="background-color:rgb(37, 145, 37)">
     <th>
         Sold Date
     </th>
@@ -28,9 +28,10 @@
     <td>{{i.Quantity}}</td>
     <td>{{i.Base_price}}</td>
     <td>{{i.Sold_price}}</td>
-    <td><a><button class="btn btn-danger btn-lg" routerLink="/farmer-welcome" >Back</button></a></td>
+  
     
 
 
 </tr>
 </table>
+<td><a><button class="btn btn-danger btn-lg" routerLink="/farmer-welcome" >Back </button></a></td>
