--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
         <!-- LOGIN FORM -->
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 container justify-content-center">
-                <h1 class="text-center login-title text-white font-weight-bold"><p>Hello Bidder!</p>
+                <h1 class="text-center login-title text-white font-weight-bold"><p>Hello Admin!</p>
                     Please Enter login details
                 </h1>
                 <div class="account-wall">
@@ -56,10 +56,10 @@
                         <button class="btn btn-outline-danger" type="reset"> Cancel</button>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <a class="btn btn-warning" routerLink="/home">
-                            Go Home</a>
+                             Home</a>
                         <br/>
                         <br/>
-                  
+                        <a routerLink="/forgotcustomerid" style="color:red" routerLink="/forgotpassword">Forgot Password?</a> &nbsp; &nbsp;&nbsp;
                         
                         <!-- <a routerLink="/forgotcustomerid" class="" routerLink="/forgotcustomerid">Forgot CustomerID</a> &nbsp; &nbsp;&nbsp;
                         <a class="" routerLink="/forgotcustomerpwd">Forgot Password</a> -->
