--- a/gladiatorFrontend/gladiatorAngular/src/app/components/sold-history/sold-history.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/sold-history/sold-history.component.css
@@ -2,5 +2,11 @@
    
     margin-left: auto;
     margin-right: auto;
-  
+    width:70%;
+}
+.button{
+    font-size:10px;
+    background-color:green;
+    border-radius: 4px;
+    margin-left:50%;
 }
